--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,53 @@
+.container {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
 
-/* 
+.support-trafic-light {
+    width: 20px;
+    height: 150px;
+    background-color: black;
+}
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
 
-*/
+.trafic-light {
+    background-color: black;
+    padding: 15px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: auto;
+    border-radius: 15%;
+}
+
+.light {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+}
+
+.red {
+    background-color: red;
+}
+
+.yellow {
+    background-color: yellow;
+    margin: 1rem auto 1rem auto;
+}
+
+.green {
+    background-color: green;
+}
+
+.blue {
+    background-color: blue;
+}
+
+.glow {
+    box-shadow: 0px 0px 15px 10px #747DE8;
+    animation: glow 1.5s linear infinite alternate;
+}
